...
                  ),
                  const SizedBox(height: 50),
                  SizedBox(
                    width: 300,
                    height: 70,
                    child: ElevatedButton(
                      key: const Key('getStartedButton'),
                      onPressed: onGetStarted,
                      style: ElevatedButton.styleFrom(
                        backgroundColor: primaryColor,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(50),
                        ),
...
